Mon Mar 12 10:51:38 UTC 2007  Steve Huston  <shuston@riverace.com>

        * bin/MakeProjectCreator/config/vc8nmake.mpb: Added /D for
          _CRT_SECURE_NO_DEPRECATE and _SCL_SECURE_NO_WARNINGS to silence
          those compile warnings; added /wd4290 to silence the warnings
          "C++ exception specification ignored except to indicate a function
          is not __declspec(nothrow)". Note that the latter warning can also
          be remedied by using ACE_THROW_SPEC; this has been done for ACE
          but not in TAO.

Mon Mar 12 01:31:16 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * examples/DLL/test_dll.cpp:

          This example was not working under Windows XP when compiled with 
          Visual Studio 2003.NET. The culprit was the following line of code:

          dll.open (ACE_TEXT("./") ACE_DLL_PREFIX ACE_TEXT("DLL_Today"));

          We don't need to supply "./" to the open method, since $ACE_ROOT/lib
          is in DLL search path environment variable (PATH for Windows and 
          LD_LIBRARY_PATH for unix-like systems).

Fri Mar  9 21:04:22 UTC 2007  Steve Huston  <shuston@riverace.com>

        * bin/MakeProjectCreator/config/vc8nmake.mpb: Added /wd4250
          (to disable inheritance via dominance warning) and
          /D _CRT_SECURE_NO_DEPRECATE to disable the warnings about
          deprecated CRT functions.

Fri Mar  9 16:49:03 UTC 2007  Steve Huston  <shuston@riverace.com>

        * ace/OS_NS_string.inl (strncat): Disable the TR24731/2005 calls to
          strncat_s() and wcsncat_s() for now. The dest length includes the
          characters that were already in dest before appending src. To really
          use the safer functions, the dest max length is needed from the
          caller. So, we'll either need a new method or an added arg to the
          current methods.

Fri Mar  9 16:27:23 UTC 2007  Steve Huston  <shuston@riverace.com>

        * ace/OS_NS_stdio.cpp (snprintf):